en file updated

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -219,5 +219,31 @@
     "Request": "",
     "Request Received!": "",
     "ProcessMaker 4 is busy processing your request.": "",
-    "You can close this page.": ""
+    "You can close this page.": "",
+    "Processes": "",
+    "Profile": "",
+    "About": "",
+    "Log Out": "",
+    "Request All": "",
+    "Started By Me": "",
+    "To Do": "",
+    "Queue Management": "",
+    "organization": "",
+    "Username": "",
+    "First Name": "",
+    "Last Name": "",
+    "Status": "",
+    "Password": "",
+    "Confirm Password": "",
+    "City": "",
+    "State or Region": "",
+    "Postal code": "",
+    "Country": "",
+    "Date format": "",
+    "Time zone": "",
+    "New Password": "",
+    "ID": "",
+    "Expires At": "",
+    "Delete": "",
+    "Generate New Token": ""
 }
