updated en file

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -245,5 +245,15 @@
     "ID": "",
     "Expires At": "",
     "Delete": "",
-    "Generate New Token": ""
+    "Generate New Token": "",
+    "Edit": "",
+    "Auth Client": "",
+    "Process": "",
+    "Category Name": "",
+    "Type to search": "",
+    "Script": "",
+    "Screen": "",
+    "Type": "",
+    "Configure": "",
+    "Environment Variable": ""
 }
