--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -262,5 +262,17 @@
     "Completed Tasks": "",
     "Modified": "",
     "Created": "",
-    "Last Login": ""
+    "Last Login": "",
+    "Remove from Group": "",
+    "# Users": "",
+    "Remove": "",
+    "Copy Client Secret To Clipboard": "",
+    "Client ID": "",
+    "Redirect": "",
+    "Client Secret": "",
+    "Export": "",
+    "Archive": "",
+    "Owner": "",
+    "# Processes": "",
+    "Duplicate": ""
 }
