--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -274,5 +274,22 @@
     "Archive": "",
     "Owner": "",
     "# Processes": "",
-    "Duplicate": ""
+    "Duplicate": "",
+    "Assignee": "",
+    "Due": "",
+    "Started": "",
+    "Open Request": "",
+    "We've made it easy for you to make the following Requests.": "",
+    "You don't have any Processes.": "",
+    "Please visit the Processes page": "",
+    "and click on +Process to get started.": "",
+    "Please contact your administrator to get started.": "",
+    "Finding Requests available to you...": "",
+    "New Request": "",
+    "New Tasks": "",
+    "No Tasks Found": "",
+    "Dismiss": "",
+    "Dismiss All": "",
+    "View All": "",
+    "Help": ""
 }
