--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -338,5 +338,25 @@
     "Enter your email address and we'll send you a reset link.": "Enter your email address and we'll send you a reset link.",
     "Email Address": "Email Address",
     "Request Reset Link": "Request Reset Link",
-    "Back to Login": "Back to Login"
+    "Back to Login": "Back to Login",
+    "ProcessMaker Installer": "ProcessMaker Installer",
+    "A .env file already exists. Stop the installation procedure, delete the existing .env file, and then restart the installation.": "A .env file already exists. Stop the installation procedure, delete the existing .env file, and then restart the installation.",
+    "Remove the .env file to perform a new installation.": "Remove the .env file to perform a new installation.",
+    "This application installs a new version of ProcessMaker.": "This application installs a new version of ProcessMaker.",
+    "You must have your database credentials available in order to continue.": "You must have your database credentials available in order to continue.",
+    "Are you ready to begin?": "Are you ready to begin?",
+    "The URL you provided is invalid. Please provide the scheme, host and path without trailing slashes.": "The URL you provided is invalid. Please provide the scheme, host and path without trailing slashes.",
+    "What is the URL of this ProcessMaker installation? (Ex: https://pm.example.com, with no trailing slash)": "What is the URL of this ProcessMaker installation? (Ex: https://pm.example.com, with no trailing slash)",
+    "Installing ProcessMaker database, OAuth SSL keys and configuration file.": "Installing ProcessMaker database, OAuth SSL keys and configuration file.",
+    "ProcessMaker database installed successfully.": "ProcessMaker database installed successfully.",
+    "ProcessMaker installation is complete. Please visit the URL in your browser to continue.": "ProcessMaker installation is complete. Please visit the URL in your browser to continue.",
+    "Installer completed. Consult ProcessMaker documentation on how to configure email, jobs and notifications.": "Installer completed. Consult ProcessMaker documentation on how to configure email, jobs and notifications.",
+    "ProcessMaker requires a MySQL database created with appropriate credentials.": "ProcessMaker requires a MySQL database created with appropriate credentials.",
+    "Database connection failed. Check your database configuration and try again.": "Database connection failed. Check your database configuration and try again.",
+    "Enter your MySQL host:": "Enter your MySQL host:",
+    "Enter your MySQL port (usually 3306):": "Enter your MySQL port (usually 3306):",
+    "Enter your MySQL database name:": "Enter your MySQL database name:",
+    "Enter your MySQL username:": "Enter your MySQL username:",
+    "Enter your MySQL password (input hidden):": "Enter your MySQL password (input hidden):",
+    "Failed to connect to MySQL database. Ensure the database exists. Check your credentials and try again.": "Failed to connect to MySQL database. Ensure the database exists. Check your credentials and try again."
 }
