--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -372,5 +372,8 @@
     "form": "form",
     "No Data Available": "No Data Available",
     "due": "due",
-    "completed": "completed"
+    "completed": "completed",
+    "Account Timeout": "Account Timeout",
+    "Your account has been timed out for security.": "Your account has been timed out for security.",
+    "Please log in to continue your work on this page.": "Please log in to continue your work on this page."
 }
