--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -372,5 +372,6 @@
     "form": "form",
     "No Data Available": "No Data Available",
     "due": "due",
-    "completed": "completed"
+    "completed": "completed",
+    "Select a user to set the api access of the script": "Select a user to set the api access of the script"
 }
