translations for generic messages and default errors

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -376,5 +376,8 @@
     "Select a user to set the api access of the script": "Select a user to set the api access of the script",
     "Subject": "Subject",
     "Unread Notifications": "Unread Notifications",
-    "All Notifications": "All Notifications"
+    "All Notifications": "All Notifications",
+    "Variable": "Variable",
+    "Variables": "Variables",
+    "Duplicate Screen": "Duplicate Screen"
 }
