Add middleware to set locale

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,5 +1,6 @@
 {
     "# Processes": "# Procesos",
     "Status": "Estado",
-    "Name": "Nombre"
+    "Name": "Nombre",
+    "Categories": "Categorías"
 }
