--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,6 +1,383 @@
 {
-    "# Processes": "# Procesos",
-    "Status": "Estado",
-    "Name": "Nombre",
-    "Categories": "Categorías"
+    "About ProcessMaker 4": "yo soy espanol",
+    "ProcessMaker v4.0 Beta 4": "yo soy espanol",
+    "Report an issue": "yo soy espanol",
+    "Get Help": "yo soy espanol",
+    "All Rights Reserved": "yo soy espanol",
+    "Auth Clients": "yo soy espanol",
+    "Admin": "yo soy espanol",
+    "Create An Auth-Client": "yo soy espanol",
+    "Name": "yo soy espanol",
+    "Name must be distinct": "yo soy espanol",
+    "Redirect URL": "yo soy espanol",
+    "Cancel": "yo soy espanol",
+    "Save": "yo soy espanol",
+    "Edit Group": "yo soy espanol",
+    "Group Details": "yo soy espanol",
+    "Group Members": "yo soy espanol",
+    "Group Permissions": "yo soy espanol",
+    "Group name must be distinct": "yo soy espanol",
+    "Search": "yo soy espanol",
+    "User": "yo soy espanol",
+    "Assign all permissions to this group": "yo soy espanol",
+    "Select user or type here to search users": "yo soy espanol",
+    "Update Group Successfully": "yo soy espanol",
+    "Group Permissions Updated Successfully": "yo soy espanol",
+    "Groups": "yo soy espanol",
+    "Group": "yo soy espanol",
+    "Create Group": "yo soy espanol",
+    "The group was created.": "yo soy espanol",
+    "Requests": "yo soy espanol",
+    "View All Requests": "yo soy espanol",
+    "Edit Request Data": "yo soy espanol",
+    "Edit Task Data": "yo soy espanol",
+    "Scripts": "yo soy espanol",
+    "View Scripts": "yo soy espanol",
+    "Create Scripts": "yo soy espanol",
+    "Edit Scripts": "yo soy espanol",
+    "Delete Scripts": "yo soy espanol",
+    "Categories": "yo soy espanol",
+    "View Categories": "yo soy espanol",
+    "Create Categories": "yo soy espanol",
+    "Edit Categories": "yo soy espanol",
+    "Delete Categories": "yo soy espanol",
+    "Screens": "yo soy espanol",
+    "View Screens": "yo soy espanol",
+    "Create Screens": "yo soy espanol",
+    "Edit Screens": "yo soy espanol",
+    "Delete Screens": "yo soy espanol",
+    "Environment Variables": "yo soy espanol",
+    "View Environment Variables": "yo soy espanol",
+    "Create Environment Variables": "yo soy espanol",
+    "Edit Environment Variables": "yo soy espanol",
+    "Delete Environment Variables": "yo soy espanol",
+    "Users": "yo soy espanol",
+    "View Users": "yo soy espanol",
+    "Create Users": "yo soy espanol",
+    "Edit Users": "yo soy espanol",
+    "Delete Users": "yo soy espanol",
+    "View Groups": "yo soy espanol",
+    "Create Groups": "yo soy espanol",
+    "Edit Groups": "yo soy espanol",
+    "Delete Groups": "yo soy espanol",
+    "View Processes": "yo soy espanol",
+    "Create Processes": "yo soy espanol",
+    "Edit Processes": "yo soy espanol",
+    "Archive Processes": "yo soy espanol",
+    "Import Processes": "yo soy espanol",
+    "Export Processes": "yo soy espanol",
+    "Comments": "yo soy espanol",
+    "View Comments": "yo soy espanol",
+    "Create Comments": "yo soy espanol",
+    "Edit Comments": "yo soy espanol",
+    "Delete Comments": "yo soy espanol",
+    "Auth-Clients": "yo soy espanol",
+    "View Auth-Clients": "yo soy espanol",
+    "Create Auth-Clients": "yo soy espanol",
+    "Edit Auth-Clients": "yo soy espanol",
+    "Delete Auth-Clients": "yo soy espanol",
+    "Files (API)": "yo soy espanol",
+    "View Files": "yo soy espanol",
+    "Create Files": "yo soy espanol",
+    "Edit Files": "yo soy espanol",
+    "Delete Files": "yo soy espanol",
+    "Notifications (API)": "yo soy espanol",
+    "View Notifications": "yo soy espanol",
+    "Create Notifications": "yo soy espanol",
+    "Edit Notifications": "yo soy espanol",
+    "Delete Notifications": "yo soy espanol",
+    "Task Assignments (API)": "yo soy espanol",
+    "View Task Assignments": "yo soy espanol",
+    "Create Task Assignments": "yo soy espanol",
+    "Edit Task Assignments": "yo soy espanol",
+    "Delete Task Assignments": "yo soy espanol",
+    "Information": "yo soy espanol",
+    "Permissions": "yo soy espanol",
+    "API Tokens": "yo soy espanol",
+    "Contact Information": "yo soy espanol",
+    "Address": "yo soy espanol",
+    "Localization": "yo soy espanol",
+    "Add User To Group": "yo soy espanol",
+    "Make this user a Super Admin": "yo soy espanol",
+    "Assign all permissions to this user": "yo soy espanol",
+    "Only the logged in user can create API tokens": "yo soy espanol",
+    "Select group or type here to search groups": "yo soy espanol",
+    "Upload Avatar": "yo soy espanol",
+    "Click the browse button below to get started": "yo soy espanol",
+    "Browse": "yo soy espanol",
+    "The user was successfully created": "yo soy espanol",
+    "User Updated Successfully": "yo soy espanol",
+    "User Permissions Updated Successfully": "yo soy espanol",
+    "Create User": "yo soy espanol",
+    "Unauthorized - ProcessMaker": "yo soy espanol",
+    "Not Authorized": "yo soy espanol",
+    "Contact your administrator for more information": "yo soy espanol",
+    "Page not found - ProcessMaker": "yo soy espanol",
+    "Oops!": "yo soy espanol",
+    "The page you are looking for could not be found": "yo soy espanol",
+    "Server Error - ProcessMaker": "yo soy espanol",
+    "Server Error": "yo soy espanol",
+    "Sorry! API failed to load": "yo soy espanol",
+    "Something went wrong. Try refreshing the application": "yo soy espanol",
+    "Notifications Inbox": "yo soy espanol",
+    "Edit Process Category": "yo soy espanol",
+    "The category name must be distinct.": "yo soy espanol",
+    "Process Categories": "yo soy espanol",
+    "Category": "yo soy espanol",
+    "Create Category": "yo soy espanol",
+    "The category was created.": "yo soy espanol",
+    "Edit Environment Variable": "yo soy espanol",
+    "The environment variable name must be distinct.": "yo soy espanol",
+    "For security purposes, this field will always appear empty": "yo soy espanol",
+    "Create Environment Variable": "yo soy espanol",
+    "The environment variable was created.": "yo soy espanol",
+    "Edit Process": "yo soy espanol",
+    "Edit Screen": "yo soy espanol",
+    "Configure Screen": "yo soy espanol",
+    "The screen name must be distinct.": "yo soy espanol",
+    "Create Screen": "yo soy espanol",
+    "The screen was created.": "yo soy espanol",
+    "Edit Script": "yo soy espanol",
+    "Configure Script": "yo soy espanol",
+    "The script name must be distinct.": "yo soy espanol",
+    "Create Script": "yo soy espanol",
+    "Language": "yo soy espanol",
+    "The script was created.": "yo soy espanol",
+    "Process Archive": "yo soy espanol",
+    "Processes Dashboard": "yo soy espanol",
+    "Configure Process": "yo soy espanol",
+    "Configuration": "yo soy espanol",
+    "Notifications": "yo soy espanol",
+    "The process name must be distinct.": "yo soy espanol",
+    "Description": "yo soy espanol",
+    "Cancel Request": "yo soy espanol",
+    "Oops! No elements found. Consider changing the search query.": "yo soy espanol",
+    "Cancel Screen": "yo soy espanol",
+    "Edit Data": "yo soy espanol",
+    "Pause Timer Start Events": "yo soy espanol",
+    "Request Started": "yo soy espanol",
+    "Request Canceled": "yo soy espanol",
+    "Request Completed": "yo soy espanol",
+    "Notify Requester": "yo soy espanol",
+    "Notify Participants": "yo soy espanol",
+    "The process was saved.": "yo soy espanol",
+    "Export Process": "yo soy espanol",
+    "You are about to export a Process.": "yo soy espanol",
+    "User assignments and sensitive environment variables will not be exported.": "yo soy espanol",
+    "Download": "yo soy espanol",
+    "The process was exported.": "yo soy espanol",
+    "Import Process": "yo soy espanol",
+    "You are about to import a Process.": "yo soy espanol",
+    "User assignments and sensitive environment variables will not be imported.": "yo soy espanol",
+    "Import": "yo soy espanol",
+    "The process was imported.": "yo soy espanol",
+    "Unable to import the process.": "yo soy espanol",
+    "Archived Processes": "yo soy espanol",
+    "Create Process": "yo soy espanol",
+    "Categories are required to create a process": "yo soy espanol",
+    "Add Category": "yo soy espanol",
+    "The category field is required.": "yo soy espanol",
+    "The process was created.": "yo soy espanol",
+    "Edit Profile": "yo soy espanol",
+    "Leave the password blank to keep the current password:": "yo soy espanol",
+    "Continue": "yo soy espanol",
+    "Email": "yo soy espanol",
+    "Phone": "yo soy espanol",
+    "Fax": "yo soy espanol",
+    "Cell": "yo soy espanol",
+    "Current Local Time": "yo soy espanol",
+    "Started by Me": "yo soy espanol",
+    "In Progress": "yo soy espanol",
+    "Completed": "yo soy espanol",
+    "All Requests": "yo soy espanol",
+    "Request Detail": "yo soy espanol",
+    "Errors": "yo soy espanol",
+    "Tasks": "yo soy espanol",
+    "Summary": "yo soy espanol",
+    "Data": "yo soy espanol",
+    "Files": "yo soy espanol",
+    "Key": "yo soy espanol",
+    "Value": "yo soy espanol",
+    "Request In Progress": "yo soy espanol",
+    "This Request is currently in progress.": "yo soy espanol",
+    "This screen will be populated once the Request is completed.": "yo soy espanol",
+    "File Name": "yo soy espanol",
+    "MIME Type": "yo soy espanol",
+    "Created At": "yo soy espanol",
+    "Requested By": "yo soy espanol",
+    "Participants": "yo soy espanol",
+    "Caution!": "yo soy espanol",
+    "Are you sure you want cancel this request ?": "yo soy espanol",
+    "Confirm": "yo soy espanol",
+    "The request data was saved.": "yo soy espanol",
+    "Add a Task": "yo soy espanol",
+    "Edit Task": "yo soy espanol",
+    "Form": "yo soy espanol",
+    "Reassign to": "yo soy espanol",
+    "Reassign": "yo soy espanol",
+    "Assigned": "yo soy espanol",
+    "Request": "yo soy espanol",
+    "Request Received!": "yo soy espanol",
+    "ProcessMaker 4 is busy processing your request.": "yo soy espanol",
+    "You can close this page.": "yo soy espanol",
+    "Processes": "yo soy espanol",
+    "Profile": "yo soy espanol",
+    "About": "yo soy espanol",
+    "Log Out": "yo soy espanol",
+    "Request All": "yo soy espanol",
+    "Started By Me": "yo soy espanol",
+    "To Do": "yo soy espanol",
+    "Queue Management": "yo soy espanol",
+    "organization": "yo soy espanol",
+    "Username": "yo soy espanol",
+    "Full Name": "yo soy espanol",
+    "First Name": "yo soy espanol",
+    "Last Name": "yo soy espanol",
+    "Status": "yo soy espanol",
+    "Password": "yo soy espanol",
+    "Confirm Password": "yo soy espanol",
+    "City": "yo soy espanol",
+    "State or Region": "yo soy espanol",
+    "Postal code": "yo soy espanol",
+    "Country": "yo soy espanol",
+    "Date format": "yo soy espanol",
+    "Time zone": "yo soy espanol",
+    "New Password": "yo soy espanol",
+    "ID": "yo soy espanol",
+    "Expires At": "yo soy espanol",
+    "Delete": "yo soy espanol",
+    "Generate New Token": "yo soy espanol",
+    "Edit": "yo soy espanol",
+    "Auth Client": "yo soy espanol",
+    "Process": "yo soy espanol",
+    "Category Name": "yo soy espanol",
+    "Type to search": "yo soy espanol",
+    "Script": "yo soy espanol",
+    "Screen": "yo soy espanol",
+    "Type": "yo soy espanol",
+    "Configure": "yo soy espanol",
+    "Environment Variable": "yo soy espanol",
+    "My Requests": "yo soy espanol",
+    "To Do Tasks": "yo soy espanol",
+    "Completed Tasks": "yo soy espanol",
+    "Modified": "yo soy espanol",
+    "Created": "yo soy espanol",
+    "Last Login": "yo soy espanol",
+    "Remove from Group": "yo soy espanol",
+    "# Users": "yo soy espanol",
+    "Remove": "yo soy espanol",
+    "Copy Client Secret To Clipboard": "yo soy espanol",
+    "Client ID": "yo soy espanol",
+    "Redirect": "yo soy espanol",
+    "Client Secret": "yo soy espanol",
+    "Export": "yo soy espanol",
+    "Archive": "yo soy espanol",
+    "Owner": "yo soy espanol",
+    "# Processes": "yo soy espanol",
+    "Duplicate": "yo soy espanol",
+    "Assignee": "yo soy espanol",
+    "Due": "yo soy espanol",
+    "Started": "yo soy espanol",
+    "Open Request": "yo soy espanol",
+    "We've made it easy for you to make the following Requests.": "yo soy espanol",
+    "You don't have any Processes.": "yo soy espanol",
+    "Please visit the Processes page": "yo soy espanol",
+    "and click on +Process to get started.": "yo soy espanol",
+    "Please contact your administrator to get started.": "yo soy espanol",
+    "Finding Requests available to you...": "yo soy espanol",
+    "New Request": "yo soy espanol",
+    "New Tasks": "yo soy espanol",
+    "No Tasks Found": "yo soy espanol",
+    "Dismiss": "yo soy espanol",
+    "Dismiss All": "yo soy espanol",
+    "View All": "yo soy espanol",
+    "Help": "yo soy espanol",
+    "Assigned To": "yo soy espanol",
+    "The script was saved.": "yo soy espanol",
+    "The category was saved.": "yo soy espanol",
+    "Are you sure you want to archive the process '": "yo soy espanol '",
+    "'?": "'?",
+    "Are you sure you want to delete the script ": "yo soy espanol ",
+    "The screen was saved.": "yo soy espanol",
+    "Are you sure you want to delete the screen ": "yo soy espanol ",
+    "The screen was deleted.": "yo soy espanol",
+    "The screen was duplicated.": "yo soy espanol",
+    "The environment variable was saved.": "yo soy espanol",
+    "Are you sure you want to delete the environment variable ": "yo soy espanol ",
+    "User has no tokens.": "yo soy espanol",
+    "The user was removed from the group.": "yo soy espanol",
+    "Are you sure you want to remove the user from the group ": "yo soy espanol",
+    "Copy Token To Clipboard": "yo soy espanol",
+    "Are you sure you want to delete the auth client ": "yo soy espanol",
+    "The auth client was ": "yo soy espanol",
+    "success": "yo soy espanol",
+    "Make sure you copy your access token now. You won't be able to see it again.": "yo soy espanol",
+    "Access token generated successfully": "yo soy espanol",
+    "Are you sure to delete the token ": "yo soy espanol",
+    "? Any services using it will no longer have access.": "yo soy espanol",
+    "User Updated Successfully ": "yo soy espanol",
+    "Open Task": "yo soy espanol",
+    "Are you sure to delete the group ": "yo soy espanol",
+    "Are you sure you want to delete the group ": "yo soy espanol",
+    "TASK": "yo soy espanol",
+    "ASSIGNED": "yo soy espanol",
+    "DUE": "yo soy espanol",
+    "The script was duplicated.": "yo soy espanol",
+    "The script was deleted.": "yo soy espanol",
+    "The environment variable was deleted.": "yo soy espanol",
+    "Are you sure you want to delete the user ": "yo soy espanol",
+    "The user was deleted.": "yo soy espanol",
+    "An error occurred. Check the form for errors in red text.": "yo soy espanol",
+    "Date Format": "yo soy espanol",
+    "Time Zone": "yo soy espanol",
+    "Postal Code": "yo soy espanol",
+    "Remember me": "yo soy espanol",
+    "Forgot Password?": "yo soy espanol",
+    "Log In": "yo soy espanol",
+    "Forgot Your Password?": "yo soy espanol",
+    "Enter your email address and we'll send you a reset link.": "yo soy espanol",
+    "Email Address": "yo soy espanol",
+    "Request Reset Link": "yo soy espanol",
+    "Back to Login": "yo soy espanol",
+    "ProcessMaker Installer": "yo soy espanol",
+    "A .env file already exists. Stop the installation procedure, delete the existing .env file, and then restart the installation.": "yo soy espanol",
+    "Remove the .env file to perform a new installation.": "yo soy espanol",
+    "This application installs a new version of ProcessMaker.": "yo soy espanol",
+    "You must have your database credentials available in order to continue.": "yo soy espanol",
+    "Are you ready to begin?": "yo soy espanol",
+    "The URL you provided is invalid. Please provide the scheme, host and path without trailing slashes.": "yo soy espanol",
+    "What is the URL of this ProcessMaker installation? (Ex: https://pm.example.com, with no trailing slash)": "yo soy espanol",
+    "Installing ProcessMaker database, OAuth SSL keys and configuration file.": "yo soy espanol",
+    "ProcessMaker database installed successfully.": "yo soy espanol",
+    "ProcessMaker installation is complete. Please visit the URL in your browser to continue.": "yo soy espanol",
+    "Installer completed. Consult ProcessMaker documentation on how to configure email, jobs and notifications.": "yo soy espanol",
+    "ProcessMaker requires a MySQL database created with appropriate credentials.": "yo soy espanol",
+    "Database connection failed. Check your database configuration and try again.": "yo soy espanol",
+    "Enter your MySQL host:": "yo soy espanol",
+    "Enter your MySQL port (usually 3306):": "yo soy espanol",
+    "Enter your MySQL database name:": "yo soy espanol",
+    "Enter your MySQL username:": "yo soy espanol",
+    "Enter your MySQL password (input hidden):": "yo soy espanol",
+    "Failed to connect to MySQL database. Ensure the database exists. Check your credentials and try again.": "yo soy espanol",
+    "These credentials do not match our records.": "yo soy espanol",
+    "Too many login attempts. Please try again in :seconds seconds.": "yo soy espanol",
+    "Passwords must be at least six characters and match the confirmation.": "yo soy espanol",
+    "Your password has been reset!": "yo soy espanol",
+    "We have e-mailed your password reset link!": "yo soy espanol",
+    "This password reset token is invalid.": "yo soy espanol",
+    "We can't find a user with that e-mail address.": "yo soy espanol",
+    "active": "yo soy espanol",
+    "inactive": "yo soy espanol",
+    "display": "yo soy espanol",
+    "form": "yo soy espanol",
+    "No Data Available": "yo soy espanol",
+    "due": "yo soy espanol",
+    "completed": "yo soy espanol",
+    "Select a user to set the api access of the script": "yo soy espanol",
+    "Subject": "yo soy espanol",
+    "Unread Notifications": "yo soy espanol",
+    "All Notifications": "yo soy espanol",
+    "Variable": "yo soy espanol",
+    "Variables": "yo soy espanol",
+    "Duplicate Screen": "yo soy espanol"
 }
