default message override

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -382,5 +382,6 @@
     "Duplicate Screen": "Duplicate Screen",
     "Run script as": "Run script as",
     "How many seconds the script should be allowed to run (0 is unlimited).": "How many seconds the script should be allowed to run (0 is unlimited).",
-    "Timeout": "Timeout"
+    "Timeout": "Timeout",
+    "No relevant data": "No relevant data"
 }
