--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -382,5 +382,6 @@
     "Duplicate Screen": "yo soy espanol",
     "Run script as": "yo soy espanol",
     "How many seconds the script should be allowed to run (0 is unlimited).": "yo soy espanol",
-    "Timeout": "yo soy espanol"
+    "Timeout": "yo soy espanol",
+    "No relevant data": "yo soy espanol"
 }
