--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -386,5 +386,15 @@
     "No relevant data": "yo soy espanol",
     "Your profile was saved.": "yo soy espanol",
     "English (US)": "yo soy espanol",
-    "Spanish": "Espanol"
+    "Spanish": "Espanol",
+    "Successfully saved": "yo soy espanol",
+    "This screen has validation errors.": "yo soy espanol",
+    "Preview Screen was Submitted": "yo soy espanol",
+    "Invalid JSON Data Object": "yo soy espanol",
+    "Valid JSON Data Object": "yo soy espanol",
+    "Data Input": "yo soy espanol",
+    "Custom CSS": "yo soy espanol",
+    "Computed Properties": "yo soy espanol",
+    "Preview": "yo soy espanol",
+    "Editor": "yo soy espanol"
 }
