screen builder translations

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -396,5 +396,7 @@
     "Custom CSS": "yo soy espanol",
     "Computed Properties": "yo soy espanol",
     "Preview": "yo soy espanol",
-    "Editor": "yo soy espanol"
+    "Editor": "yo soy espanol",
+    "Drop files here to upload or": "yo soy espanol",
+    "select files": "yo soy espanol"
 }
