--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -396,5 +396,7 @@
     "Custom CSS": "Custom CSS",
     "Computed Properties": "Computed Properties",
     "Preview": "Preview",
-    "Editor": "Editor"
+    "Editor": "Editor",
+    "Drop files here to upload or": "Drop files here to upload or",
+    "select files": "select files"
 }
