--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -398,5 +398,39 @@
     "Preview": "Preview",
     "Editor": "Editor",
     "Drop files here to upload or": "Drop files here to upload or",
-    "select files": "select files"
+    "select files": "select files",
+    "Background color": "Background color",
+    "Controls": "Controls",
+    "Text Box": "Text Box",
+    "Line Input": "Line Inputs",
+    "Select": "Select",
+    "Radio Group": "Radio Group",
+    "Checkbox": "Checkbox",
+    "Textarea": "Textarea",
+    "Date Picker": "Date Picker",
+    "Submit Button": "Submit Button",
+    "Page Navigation": "Page Navigation",
+    "Multi Column": "Multi Column",
+    "Record List": "Record List",
+    "Image": "Image",
+    "+ Add Page": "+ Add Page",
+    "Add New Page": "Add New Page",
+    "Page Name": "Page Name",
+    "The name of the new page to add": "The name of the new page to add",
+    "Edit Page Title": "Edit Page Title",
+    "The new name of the page": "The new name of the page",
+    "Add Property": "Add Property",
+    "Details": "Details",
+    "action": "action",
+    "edit": "edit",
+    "Field:": "Field:",
+    "Formula:": "Formula:",
+    "Hide Details": "Hide Details",
+    "Property Name": "Property Name",
+    "Formula": "Formula",
+    "The property formula field is required.": "The property formula field is required.",
+    "Property already exists": "Property already exists",
+    "Property Saved": "Property Saved",
+    "Property Edited": "Property Edited",
+    "Property deleted": "Property deleted"
 }
