--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -398,5 +398,39 @@
     "Preview": "yo soy espanol",
     "Editor": "yo soy espanol",
     "Drop files here to upload or": "yo soy espanol",
-    "select files": "yo soy espanol"
+    "select files": "yo soy espanol",
+    "Background color": "yo soy espanol",
+    "Controls": "yo soy espanol",
+    "Text Box": "yo soy espanol",
+    "Line Input": "yo soy espanol",
+    "Select": "yo soy espanol",
+    "Radio Group": "yo soy espanol",
+    "Checkbox": "yo soy espanol",
+    "Textarea": "yo soy espanol",
+    "Date Picker": "yo soy espanol",
+    "Submit Button": "yo soy espanol",
+    "Page Navigation": "yo soy espanol",
+    "Multi Column": "yo soy espanol",
+    "Record List": "yo soy espanol",
+    "Image": "yo soy espanol",
+    "+ Add Page": "yo soy espanol",
+    "Add New Page": "yo soy espanol",
+    "Page Name": "yo soy espanol",
+    "The name of the new page to add": "yo soy espanol",
+    "Edit Page Title": "yo soy espanol",
+    "The new name of the page": "yo soy espanol",
+    "Add Property": "yo soy espanol",
+    "Details": "yo soy espanol",
+    "action": "yo soy espanol",
+    "edit": "yo soy espanol",
+    "Field:": "yo soy espanol",
+    "Formula:": "yo soy espanol",
+    "Hide Details": "yo soy espanol",
+    "Property Name": "yo soy espanol",
+    "Formula": "yo soy espanol",
+    "The property formula field is required.": "yo soy espanol",
+    "Property already exists": "yo soy espanol",
+    "Property Saved": "yo soy espanol",
+    "Property Edited": "yo soy espanol",
+    "Property deleted": "yo soy espanol"
 }
