--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -522,5 +522,10 @@
     "Width": "Width",
     "image width": "image width",
     "Height": "Height",
-    "Image height": "Image height"
+    "Image height": "Image height",
+    "Visibility Rule": "Visibility Rule",
+    "This control is hidden until this expression is true": "This control is hidden until this expression is true",
+    "CSS Selector Name": "CSS Selector Name",
+    "Use this in your custom css rules": "Use this in your custom css rules",
+    "Data Preview": "Data Preview"
 }
