Add missing language string

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,4 +1,5 @@
 {
+    "Are you sure you want to delete {{item}}?": "Are you sure you want to delete {{item}}?",
     "About ProcessMaker 4": "About ProcessMaker 4",
     "ProcessMaker v4.0 Beta 4": "ProcessMaker v4.0 Beta 4",
     "Report an issue": "Report an issue",
