--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -439,92 +439,94 @@
     "New Submit": "yo soy espanol",
     "Field Label": "yo soy espanol",
     "New Record List": "yo soy espanol",
-    "Set the element's background color": "",
-    "primary": "",
-    "secondary": "",
-    "danger": "",
-    "warning": "",
-    "info": "",
-    "light": "",
-    "dark": "",
-    "Text color": "",
-    "Set the element's text color": "",
-    "New Text": "",
-    "The text to display": "",
-    "Font Weight": "",
-    "The weight of the text": "",
-    "Normal": "",
-    "Bold": "",
-    "Text Horizontal Alignment": "",
-    "Horizontal alignment of the text": "",
-    "Center": "",
-    "Left": "",
-    "Right": "",
-    "Justify": "",
-    "Text Vertical Alignment": "",
-    "Vertical alignment of the text": "",
-    "Top": "",
-    "Middle": "",
-    "Bottom": "",
-    "Font Size": "",
-    "The size of the text in em": "",
-    "New Input": "",
-    "Field Name": "",
-    "The data name for this field": "",
-    "Field Type": "",
-    "The type for this field": "",
-    "Text": "",
-    "The label describes the fields name": "",
-    "Validation": "",
-    "The validation rules needed for this field": "",
-    "Placeholder": "",
-    "The placeholder is what is shown in the field when no value is provided yet": "",
-    "Help Text": "",
-    "Help text is meant to provide additional guidance on the field's value": "",
-    "New Select": "",
-    "New Option": "",
-    "Options List": "",
-    "List of options available in the select drop down": "",
-    "New Radio Button Group": "",
-    "Toggle Style?": "",
-    "New Checkbox": "",
-    "The name of the group for the checkbox. All checkboxes which share the same name will work together.": "",
-    "Initially Checked?": "",
-    "Should the checkbox be checked by default": "",
-    "New TextArea": "",
-    "Rows": "",
-    "The number of rows to provide for input": "",
-    "New Date Picker": "",
-    "The label describes the button's text": "",
-    "The name of the button": "",
-    "The value being submitted": "",
-    "Field Value": "",
-    "Variant": "",
-    "The variant determines the appearance of the button": "",
-    "New Page Navigation": "",
-    "Destination": "",
-    "The destination page to navigate to": "",
-    "Column Widths": "",
-    "The data name for this list": "",
-    "List Label": "",
-    "The label describes this record list": "",
-    "Editable?": "",
-    "Should records be editable/removable and can new records be added": "",
-    "Fields List": "",
-    "List of fields to display in the record list": "",
-    "Record Form": "",
-    "The form to use for adding/editing records": "",
-    "Id": "",
-    "Image id": "",
-    "The name of the image": "",
-    "Upload image": "",
-    "Width": "",
-    "image width": "",
-    "Height": "",
-    "Image height": "",
-    "Visibility Rule": "",
-    "This control is hidden until this expression is true": "",
-    "CSS Selector Name": "",
-    "Use this in your custom css rules": "",
-    "Data Preview": ""
+    "Set the element's background color": "yo soy espanol",
+    "primary": "yo soy espanol",
+    "secondary": "yo soy espanol",
+    "danger": "yo soy espanol",
+    "warning": "yo soy espanol",
+    "info": "yo soy espanol",
+    "light": "yo soy espanol",
+    "dark": "yo soy espanol",
+    "Text color": "yo soy espanol",
+    "Set the element's text color": "yo soy espanol",
+    "New Text": "yo soy espanol",
+    "The text to display": "yo soy espanol",
+    "Font Weight": "yo soy espanol",
+    "The weight of the text": "yo soy espanol",
+    "Normal": "yo soy espanol",
+    "Bold": "yo soy espanol",
+    "Text Horizontal Alignment": "yo soy espanol",
+    "Horizontal alignment of the text": "yo soy espanol",
+    "Center": "yo soy espanol",
+    "Left": "yo soy espanol",
+    "Right": "yo soy espanol",
+    "Justify": "yo soy espanol",
+    "Text Vertical Alignment": "yo soy espanol",
+    "Vertical alignment of the text": "yo soy espanol",
+    "Top": "yo soy espanol",
+    "Middle": "yo soy espanol",
+    "Bottom": "yo soy espanol",
+    "Font Size": "yo soy espanol",
+    "The size of the text in em": "yo soy espanol",
+    "New Input": "yo soy espanol",
+    "Field Name": "yo soy espanol",
+    "The data name for this field": "yo soy espanol",
+    "Field Type": "yo soy espanol",
+    "The type for this field": "yo soy espanol",
+    "Text": "yo soy espanol",
+    "The label describes the fields name": "yo soy espanol",
+    "Validation": "yo soy espanol",
+    "The validation rules needed for this field": "yo soy espanol",
+    "Placeholder": "yo soy espanol",
+    "The placeholder is what is shown in the field when no value is provided yet": "yo soy espanol",
+    "Help Text": "yo soy espanol",
+    "Help text is meant to provide additional guidance on the field's value": "yo soy espanol",
+    "New Select": "yo soy espanol",
+    "New Option": "yo soy espanol",
+    "Options List": "yo soy espanol",
+    "List of options available in the select drop down": "yo soy espanol",
+    "New Radio Button Group": "yo soy espanol",
+    "Toggle Style?": "yo soy espanol",
+    "New Checkbox": "yo soy espanol",
+    "The name of the group for the checkbox. All checkboxes which share the same name will work together.": "yo soy espanol",
+    "Initially Checked?": "yo soy espanol",
+    "Should the checkbox be checked by default": "yo soy espanol",
+    "New TextArea": "yo soy espanol",
+    "Rows": "yo soy espanol",
+    "The number of rows to provide for input": "yo soy espanol",
+    "New Date Picker": "yo soy espanol",
+    "The label describes the button's text": "yo soy espanol",
+    "The name of the button": "yo soy espanol",
+    "The value being submitted": "yo soy espanol",
+    "Field Value": "yo soy espanol",
+    "Variant": "yo soy espanol",
+    "The variant determines the appearance of the button": "yo soy espanol",
+    "New Page Navigation": "yo soy espanol",
+    "Destination": "yo soy espanol",
+    "The destination page to navigate to": "yo soy espanol",
+    "Column Widths": "yo soy espanol",
+    "The data name for this list": "yo soy espanol",
+    "List Label": "yo soy espanol",
+    "The label describes this record list": "yo soy espanol",
+    "Editable?": "yo soy espanol",
+    "Should records be editable/removable and can new records be added": "yo soy espanol",
+    "Fields List": "yo soy espanol",
+    "List of fields to display in the record list": "yo soy espanol",
+    "Record Form": "yo soy espanol",
+    "The form to use for adding/editing records": "yo soy espanol",
+    "Id": "yo soy espanol",
+    "Image id": "yo soy espanol",
+    "The name of the image": "yo soy espanol",
+    "Upload image": "yo soy espanol",
+    "Width": "yo soy espanol",
+    "image width": "yo soy espanol",
+    "Height": "yo soy espanol",
+    "Image height": "yo soy espanol",
+    "Visibility Rule": "yo soy espanol",
+    "This control is hidden until this expression is true": "yo soy espanol",
+    "CSS Selector Name": "yo soy espanol",
+    "Use this in your custom css rules": "yo soy espanol",
+    "Data Preview": "yo soy espanol",
+    "Inspector": "yo soy espanol",
+    "FormSelect": "yo soy espanol"
 }
