file upload and download translations

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -528,5 +528,14 @@
     "Use this in your custom css rules": "yo soy espanol",
     "Data Preview": "yo soy espanol",
     "Inspector": "yo soy espanol",
-    "FormSelect": "yo soy espanol"
+    "Form Select": "yo soy espanol",
+    "File Upload": "yo soy espanol",
+    "New File Upload": "yo soy espanol",
+    "Text Label": "yo soy espanol",
+    "Upload Name": "yo soy espanol",
+    "The name of the upload": "yo soy espanol",
+    "File Download": "yo soy espanol",
+    "New File Download": "yo soy espanol",
+    "Download Name": "yo soy espanol",
+    "The name of the Download": "yo soy espanol"
 }
