--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -279,8 +279,8 @@
     "Due": "yo soy espanol",
     "Started": "yo soy espanol",
     "Open Request": "yo soy espanol",
-    "We've made it easy for you to make the following Requests.": "yo soy espanol",
-    "You don't have any Processes.": "yo soy espanol",
+    "We/'ve made it easy for you to make the following Requests.": "yo soy espanol",
+    "You don/'t have any Processes.": "yo soy espanol",
     "Please visit the Processes page": "yo soy espanol",
     "and click on +Process to get started.": "yo soy espanol",
     "Please contact your administrator to get started.": "yo soy espanol",
@@ -306,7 +306,7 @@
     "Copy Token To Clipboard": "yo soy espanol",
     "The auth client was ": "yo soy espanol",
     "success": "yo soy espanol",
-    "Make sure you copy your access token now. You won't be able to see it again.": "yo soy espanol",
+    "Make sure you copy your access token now. You won/'t be able to see it again.": "yo soy espanol",
     "Access token generated successfully": "yo soy espanol",
     "Are you sure to delete the token ": "yo soy espanol",
     "? Any services using it will no longer have access.": "yo soy espanol",
@@ -328,7 +328,7 @@
     "Forgot Password?": "yo soy espanol",
     "Log In": "yo soy espanol",
     "Forgot Your Password?": "yo soy espanol",
-    "Enter your email address and we'll send you a reset link.": "yo soy espanol",
+    "Enter your email address and we/'ll send you a reset link.": "yo soy espanol",
     "Email Address": "yo soy espanol",
     "Request Reset Link": "yo soy espanol",
     "Back to Login": "yo soy espanol",
@@ -358,7 +358,7 @@
     "Your password has been reset!": "yo soy espanol",
     "We have e-mailed your password reset link!": "yo soy espanol",
     "This password reset token is invalid.": "yo soy espanol",
-    "We can't find a user with that e-mail address.": "yo soy espanol",
+    "We can/'t find a user with that e-mail address.": "yo soy espanol",
     "active": "yo soy espanol",
     "inactive": "yo soy espanol",
     "display": "yo soy espanol",
@@ -432,7 +432,7 @@
     "New Submit": "yo soy espanol",
     "Field Label": "yo soy espanol",
     "New Record List": "yo soy espanol",
-    "Set the element's background color": "yo soy espanol",
+    "Set the element/'s background color": "yo soy espanol",
     "primary": "yo soy espanol",
     "secondary": "yo soy espanol",
     "danger": "yo soy espanol",
@@ -440,8 +440,15 @@
     "info": "yo soy espanol",
     "light": "yo soy espanol",
     "dark": "yo soy espanol",
+    "Primary": "yo soy espanol",
+    "Secondary": "yo soy espanol",
+    "Danger": "yo soy espanol",
+    "Warning": "yo soy espanol",
+    "Info": "yo soy espanol",
+    "Light": "yo soy espanol",
+    "Dark": "yo soy espanol",
     "Text color": "yo soy espanol",
-    "Set the element's text color": "yo soy espanol",
+    "Set the element/'s text color": "yo soy espanol",
     "New Text": "yo soy espanol",
     "The text to display": "yo soy espanol",
     "Font Weight": "yo soy espanol",
@@ -473,7 +480,7 @@
     "Placeholder": "yo soy espanol",
     "The placeholder is what is shown in the field when no value is provided yet": "yo soy espanol",
     "Help Text": "yo soy espanol",
-    "Help text is meant to provide additional guidance on the field's value": "yo soy espanol",
+    "Help text is meant to provide additional guidance on the field/'s value": "yo soy espanol",
     "New Select": "yo soy espanol",
     "New Option": "yo soy espanol",
     "Options List": "yo soy espanol",
@@ -488,7 +495,7 @@
     "Rows": "yo soy espanol",
     "The number of rows to provide for input": "yo soy espanol",
     "New Date Picker": "yo soy espanol",
-    "The label describes the button's text": "yo soy espanol",
+    "The label describes the button/'s text": "yo soy espanol",
     "The name of the button": "yo soy espanol",
     "The value being submitted": "yo soy espanol",
     "Field Value": "yo soy espanol",
@@ -530,5 +537,21 @@
     "File Download": "yo soy espanol",
     "New File Download": "yo soy espanol",
     "Download Name": "yo soy espanol",
-    "The name of the Download": "yo soy espanol"
+    "The name of the Download": "yo soy espanol",
+    "Show in Json Format": "",
+    "Content": "",
+    "Add Record": "",
+    "There is no records in this list or the data is invalid.": "",
+    "Edit Record": "",
+    "Delete Record": "",
+    "Are you sure you want to remove this record?": "",
+    "Information form": "",
+    "The form to be displayed is not assigned..": "",
+    "The Record List control is not allowed to reference other controls on its own page to add or edit records. Specify a secondary page with controls to enter records.": "",
+    "Search...": "",
+    "Column": "",
+    "Add New Column": "",
+    "Column Width": "",
+    "Help text is meant to provide additional guidance on the field's value": "",
+    "Add New Option": ""
 }
