--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -447,6 +447,7 @@
     "Info": "yo soy espanol",
     "Light": "yo soy espanol",
     "Dark": "yo soy espanol",
+    "Link": "yo soy espanol",
     "Text color": "yo soy espanol",
     "Set the element/'s text color": "yo soy espanol",
     "New Text": "yo soy espanol",
@@ -538,20 +539,25 @@
     "New File Download": "yo soy espanol",
     "Download Name": "yo soy espanol",
     "The name of the Download": "yo soy espanol",
-    "Show in Json Format": "",
-    "Content": "",
-    "Add Record": "",
-    "There is no records in this list or the data is invalid.": "",
-    "Edit Record": "",
-    "Delete Record": "",
-    "Are you sure you want to remove this record?": "",
-    "Information form": "",
-    "The form to be displayed is not assigned..": "",
-    "The Record List control is not allowed to reference other controls on its own page to add or edit records. Specify a secondary page with controls to enter records.": "",
-    "Search...": "",
-    "Column": "",
-    "Add New Column": "",
-    "Column Width": "",
-    "Help text is meant to provide additional guidance on the field's value": "",
-    "Add New Option": ""
+    "Show in Json Format": "yo soy espanol",
+    "Content": "yo soy espanol",
+    "Add Record": "yo soy espanol",
+    "There is no records in this list or the data is invalid.": "yo soy espanol",
+    "Edit Record": "yo soy espanol",
+    "Delete Record": "yo soy espanol",
+    "Are you sure you want to remove this record?": "yo soy espanol",
+    "Information form": "yo soy espanol",
+    "The form to be displayed is not assigned..": "yo soy espanol",
+    "The Record List control is not allowed to reference other controls on its own page to add or edit records. Specify a secondary page with controls to enter records.": "yo soy espanol",
+    "Search...": "yo soy espanol",
+    "Column": "yo soy espanol",
+    "Add New Column": "yo soy espanol",
+    "Column Width": "yo soy espanol",
+    "Help text is meant to provide additional guidance on the field's value": "yo soy espanol",
+    "Add New Option": "yo soy espanol",
+    "Set the element's background color": "yo soy espanol",
+    "Set the element's text color": "yo soy espanol",
+    "List of options available in the radio button group": "yo soy espanol",
+    "Add Option": "yo soy espanol",
+    "Add Column": "Add Column"
 }
